--- a/index.Rmd
+++ b/index.Rmd
@@ -11,7 +11,23 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
-library(caret)
+
+if (!require("pacman")) install.packages("pacman")
+pacman::p_load(caret, caretEnsemble, arm, C50, plyr, earth, mda, gbm, MASS, randomForest, sda, kernlab, xgboost)
+# library(caret)
+# library(caretEnsemble)
+# library(bnclassify)
+# library(arm)
+# library(C50)
+# library(plyr)
+# library(earth)
+# library(mda)
+# library(gbm)
+# library(MASS)
+# library(randomForest)
+# library(sda)
+# library(kernlab)
+# library(xgboost)
 set.seed(42)
 ```
 
@@ -20,7 +36,7 @@ With wearable heath and fitness devices becoming increasingly popular, and corre
 
 The [Weight Lifting Exercises Dataset](http://groupware.les.inf.puc-rio.br/har#weight_lifting_exercises) aims to test the feasibility of assessing the quality of weight lifting exercises performed by inexperienced individuals, potentially as a precursor to personalized digital personal trainers. The data were collected by attaching orientation sensors on a dumbbell and the participant's arm, forearm, and belt. They were then instructed to perform 10 sets of unilateral dumbbell biceps curls in one correct and four incorrect ways: "*exactly according to the specification (Class A), throwing the elbows to the front (Class B), lifting the dumbbell only halfway (Class C), lowering the dumbbell only halfway (Class D) and throwing the hips to the front (Class E).*" More details are available at the [researchers' website](http://groupware.les.inf.puc-rio.br/har).
 
-The goal is to develop machine learning algorithms which correctly classify the quality of the exercise performed given the sensor data. We show here an implementation achieving 99.69% overall classification accuracy.
+The goal is to develop machine learning algorithms which correctly classify the quality of the exercise performed given the sensor data. We show here an implementation achieving 99.7% overall classification accuracy.
 
 ### Data Exploration and Preprocessing
 
@@ -81,7 +97,7 @@ myPreProc <- function(df, keep.cols, skip.cols = 7) {
     ncols <- ncol(proc_df)
     proc_df <- proc_df[, c(ncols, 1:(ncols-1))]
 
-    # make all columns numeric
+    # make all columns (except response) numeric
     proc_df[ , 2:ncols] <- as.data.frame(lapply(proc_df[ , -1], as.numeric))
     
     proc_df
@@ -97,7 +113,36 @@ The exact same preprocessing that is done to the training set is also done to th
 
 ### Modeling
 
+One approach to modeling is to try many different types of machine learning algorithms initially, evaluate their performance, and then tune the more successful one(s) as needed. This has the benefit of being data-driven based on empirical results. We will try ten algorithms, several of which use very different underlying approaches to the modeling. The `caretEnsemble` package makes it easy to train many models simultaneously with `caretList`.
+
+5-fold cross-validation is used for choosing model parameters. The training data set is split into 5 stratified groups, with the model trained on 4 of them, and the model's performance tested on the remaining group. The groups are then rotated until each group has been used for testing. Often for better model performance, 10-fold repeated cross-validation is suggested, however, here we begin with 5-fold non-repeated cross-validation in the interest of computational speed, and we will consider more stringent methods if the results indicate the need. `caret` automatically tries several parameter combinations (as required by the model) to build the optimal model. If this fails to produce good results we can later specify the number and values of parameters to try.
+
+```{r model-train}
+mycontrol <- trainControl(method = "cv", number = 5)
+mymethods <- c("bayesglm", "C5.0", "fda", "gbm", "knn",  "qda", "rf", "sda", "svmPoly", "xgbLinear")
+    
+start_time <- proc.time()
+model_list <- caretList(x = pr_training[ , -1],
+                        y = pr_training[ , 1],
+                        trControl = mycontrol,
+                        methodList = mymethods
+                        )
+
+proc.time() - start_time # model training runtime for curiosity
+```
+
+Next, the built models are used to make predictions on the validation set to obtain our best unbiased estimates of model performance on unseen data. These results guide the decision of which model(s) to use in the future.
+
+```{r model-performance}
+pred_list <- lapply(model_list, function(x) predict(x, newdata = pr_validation[ , -1]))
+(accuracy <- sort(sapply(pred_list, function(x) confusionMatrix(x, pr_validation[ , 1])$overall[1]), decreasing = T))
+```
+
+Several of the models perform very well with `r print(unlist(strsplit(names(accuracy[1]), split = "\\."))[1], quote = F)` having the highest accuracy. 
+
 ### Results
+
+Considering the high accuracies achieved 
 
 ### Conclusions
 
