--- a/index.Rmd
+++ b/index.Rmd
@@ -16,10 +16,15 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 if (!require("pacman")) install.packages("pacman", repos = "http://cran.us.r-project.org")
 pacman::p_load(parallel, doParallel, downloader, caret, caretEnsemble, e1071, arm, C50, plyr, earth, mda, gbm, MASS, randomForest, sda, kernlab, xgboost)
 
-# setup parallel computing
-cluster <- makeCluster(detectCores() - 1) # leave 1 core for OS
-registerDoParallel(cluster)
+# set flag whether to use parallel processing
+use_parallel <- TRUE
 
+if(use_parallel){
+    # setup parallel computing
+    cluster <- makeCluster(detectCores() - 1) # leave 1 core for OS
+    registerDoParallel(cluster)
+}
+    
 # set seed for reproducibility 
 set.seed(42)
 ```
@@ -41,10 +46,10 @@ if(!exists("pml_training") & !exists("pml_testing")){
         testing_file <- "pml-testing.csv"
         
         if(!file.exists(training_file) & !file.exists(testing_file)){
-        training_url <- "https://d396qusza40orc.cloudfront.net/predmachlearn/pml-training.csv"
-        testing_url <- "https://d396qusza40orc.cloudfront.net/predmachlearn/pml-testing.csv"
-        download(training_url, training_file)
-        download(testing_url, testing_file)
+            training_url <- "https://d396qusza40orc.cloudfront.net/predmachlearn/pml-training.csv"
+            testing_url <- "https://d396qusza40orc.cloudfront.net/predmachlearn/pml-testing.csv"
+            download(training_url, training_file)
+            download(testing_url, testing_file)
         }
         
         pml_training <- read.csv("pml-training.csv", na.strings = c(NA, ""))
@@ -58,7 +63,7 @@ names(pml_training)
 Before any exploration, the data are first partitioned into training and validation sets, with the validation set left aside to prevent making any analysis decisions on what should be treated as "unseen" data at this point. 
 
 ```{r partition-data}
-ind_training <- createDataPartition(pml_training$classe, p = 0.75, list = F)
+ind_training <- createDataPartition(pml_training$classe, p = 0.75, list = FALSE)
 training <- pml_training[ind_training, ]
 validation <- pml_training[-ind_training, ]
 
@@ -110,12 +115,12 @@ One approach to modeling is to try many different types of machine learning algo
 
 5-fold cross-validation is used for choosing model parameters. The training data set is split into 5 stratified groups, with the model trained on 4 of them, and the model's performance tested on the remaining group. The groups are then rotated until each group has been used for testing. Often for better model performance, 10-fold repeated cross-validation is suggested, however, here we begin with 5-fold non-repeated cross-validation in the interest of computational speed, and we will consider more stringent methods if the results indicate the need. `caret` automatically tries several parameter combinations (as required by the model) to build the optimal model. If this fails to produce good results we can later specify the number and values of parameters to try.
 
-```{r model-train, message=F, warning=F}
+```{r model-train, results="hide"}
 mycontrol <- trainControl(method = "cv", number = 5)
 mymethods <- c("bayesglm", "C5.0", "fda", "gbm", "knn",  "qda", "rf", "sda", "svmPoly", "xgbLinear")
     
 # load models if already trained since training can take several hours
-# if models must be changed, delete "model_list.rds" in working directory
+# if models must be changed, delete "model_list.rds" in working directory before running script
 
 model_fname <- "model_list.rds"
 if(file.exists(model_fname)){
@@ -132,11 +137,15 @@ if(file.exists(model_fname)){
                             )
     
     # model training runtime for curiosity
-    print(proc.time() - start_time)
+    runtime <- proc.time() - start_time
 
     #save models to speed up later analyses
     saveRDS(model_list, model_fname)
 }
+```
+
+```{r model-plot}
+if(exists("runtime")) print(runtime) # print runtime only if training was run
 
 dotplot(resamples(model_list))
 ```
@@ -145,10 +154,12 @@ The plot shows promising performance for several of the models. Both the accurac
 
 Next, the built models are used to make predictions on the validation set to obtain our best unbiased estimates of model performance on unseen data. This also helps to make sure we do not have high variance (overfitting) issues. These results guide the decision of which model(s) to use in the future.
 
-```{r model-performance, message=F, warning=F}
+```{r model-prediction, results="hide"}
 pred_list <- lapply(model_list, function(x) predict(x, newdata = pr_validation[ , -1]))
-(accuracy <- sort(sapply(pred_list, function(x) confusionMatrix(x, pr_validation[ , 1])$overall[1]), decreasing = T))
+```
 
+```{r model-accuracy}
+(accuracy <- sort(sapply(pred_list, function(x) confusionMatrix(x, pr_validation[ , 1])$overall[1]), decreasing = TRUE))
 ```
 
 Several of the models have high accuracies, with `r unlist(strsplit(names(accuracy[1]), split = "\\."))[1]` having the highest at `r round(accuracy[[1]], 3)*100`%. Equivalently, the out-of-sample, or generalization, error is estimated at `r round(1 - accuracy[1], 3)*100`%. Furthermore, the confusion matrix, below, indicates the accuracy is consistently high across all classes. Interestingly, it performs perfectly on Class A, which is the class for the weight lifting exercise performed correctly. This means that when an individual performs the exercise well, it is very unlikely for the model to flag it as incorrect, which would be quite frustrating for the user.
@@ -179,7 +190,9 @@ Although the performance is sufficient for this application, a more thorough exp
 ### References
 Velloso, E.; Bulling, A.; Gellersen, H.; Ugulino, W.; Fuks, H. [Qualitative Activity Recognition of Weight Lifting Exercises](http://groupware.les.inf.puc-rio.br/work.jsf?p1=11201). Proceedings of 4th International Conference in Cooperation with SIGCHI (Augmented Human '13) . Stuttgart, Germany: ACM SIGCHI, 2013.
 
-```{r housekeeping, include=F}
-stopCluster(cluster)
+```{r housekeeping, include=FALSE}
+if(use_parallel){
+    stopCluster(cluster)
+}
 ```
 
